estilo_reservacion.css

--- a/Reservacion/estilo/estilo_reservacion.css
+++ b/Reservacion/estilo/estilo_reservacion.css
@@ -304,6 +304,11 @@ section.Datos div{
     width: 100%; 
     text-align: center; 
   }
+
+  #reserv{
+    height: 350px;
+    width: 100%;
+  }
 }
 
 
